--- a/.github/workflows/apkbuild.yml
+++ b/.github/workflows/apkbuild.yml
@@ -43,16 +43,17 @@ jobs:
           fi
           echo "tags=${TAGS}" >> $GITHUB_OUTPUT
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: "Build and push APK builder docker image to DockerHub"
         id: docker_build_builder
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
           push: true
+          provenance: false
           tags: ${{ steps.prepare.outputs.tags }}
           file: apk/Dockerfile-${{matrix.alpine}}
