--- a/.github/auto-update-template.yml
+++ b/.github/auto-update-template.yml
@@ -22,7 +22,7 @@ jobs:
         package-name:
 %PACKAGE_LIST%
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Get current package information
         shell: bash
@@ -53,7 +53,7 @@ jobs:
           make readme
 
       - name: Create Pull Request
-        uses: cloudposse/actions/github/create-pull-request@0.32.0
+        uses: peter-evans/create-pull-request@v5
         if: steps.update.outputs.package_version != steps.current.outputs.package_version
         with:
           token: ${{ secrets.GITHUB_BOT_TOKEN }}
